# test1

./: .gitignore  .hgignore  README.md  pyproject.toml
app/app/: app.py  dbRouter.py  settings.py  urls.py  views.py
app/app/static/: main.scss
app/app/templates/: index.html
app/app/utils/: context_processors.py
app/ngpt/: apps.py  filters.py  models.py  urls.py  views.py
app/ngpt/static/: main__ngpt.scss
app/ngpt/templates/: quest_form.html  question.html
app/ngpt/templates/registration/: login.html
app/templates/: base.html
app/templates/admin/: base.html  base_site.html
app/templates/includes/: footer.html  head.html  menu.html
